--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <!-- language & dependency versions -->
         <java.abi>1.6</java.abi>
         <scala.version>2.10.4</scala.version>
-        <elasticsearch.version>1.1.0</elasticsearch.version>
-        <mesos.version>0.18.0</mesos.version>
-        <logback.version>1.0.9</logback.version>
+        <elasticsearch.version>1.3.2</elasticsearch.version>
+        <mesos.version>0.20.0</mesos.version>
+        <logback.version>1.0.13</logback.version>
 
     </properties>
 
@@ -52,9 +52,9 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
         </dependency>
 
         <dependency>
@@ -147,5 +147,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
